# Pico2-FreeRTOS-Basic-Example

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c
